--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@media="screen";
+/* @media="screen"; */
 
 header>img {
   height: 250px;
@@ -17,9 +17,12 @@ header>h1 {
   color: maroon;
 }
 
-#match-info {
+#match {
   border: 1px solid red;
+}
+#match-info {
   color: navy;
+  border: 1px solid red;
   background-color: skyblue;
   border-radius: 0.2em;
   padding: 1%;
@@ -65,10 +68,9 @@ body {
 } */
 
 
-.button {
+ .button {
   padding: 15px 25px;
-  font-size: 24px;
-  font-family: 'Nova Square', bold;
+  font-family: 'Nova Square';
   text-align: center;
   cursor: pointer;
   outline: none;
@@ -79,10 +81,62 @@ body {
   box-shadow: 0 9px #999;
 }
 
-.button:hover {background-color: navy}
+.button:hover {
+  background-color: maroon
+  color: skyblue;
+}
 
 .button:active {
-  background-color: navy;
+  background-color: maroon;
+  color: skyblue;
   box-shadow: 0 5px #666;
   transform: translateY(4px); */
+}
+
+.modal-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 128, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.bg-active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal {
+  border-color: skyblue;
+  width: 30%;
+  height: 30%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Nova Square';
+  position: relative;
+}
+
+.modal button {
+  padding: 10px 30px;
+  background-color: skyblue;
+  color: maroon;
+  font-family: 'Nova Square';
+  cursor: pointer;
+}
+
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-weight: bold;
+  cursor: pointer;
 }
