--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* @media="screen"; */
-
 header>img {
   height: 250px;
   width: 250px;
@@ -17,9 +15,6 @@ header>h1 {
   color: maroon;
 }
 
-#match {
-  border: 1px solid red;
-}
 #match-info {
   color: navy;
   border: 1px solid red;
@@ -36,7 +31,7 @@ body {
 .container {
  font-family: 'Nova Square';
  font-size: 13px;
- /* font-weight: bold; */
+ font-weight: bold;
  margin: 0;
  color: navy;
  text-align: center;
@@ -45,28 +40,6 @@ body {
  flex-wrap: wrap;
  justify-content: space-evenly;
 }
-}
-
-/* #home {
-  column-count: 1;
-  float: right;
-  width: 400px;
-  height: 100px;
-  margin-bottom: 30px;
-  margin-right: 30px;
-  margin-left: 30px;
-}
-
-#away {
-  column-count: 1;
-  float: left;
-  width: 400px;
-  height: 100px;
-  margin-bottom: 30px;
-  margin-left: 30px;
-  margin-right: 30px
-} */
-
 
  .button {
   padding: 15px 25px;
@@ -87,56 +60,61 @@ body {
 }
 
 .button:active {
-  background-color: maroon;
+  background-color: navy;
   color: skyblue;
   box-shadow: 0 5px #666;
-  transform: translateY(4px); */
+  transform: translateY(4px);
 }
 
-.modal-bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 128, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s, opacity 0.5s;
+button.active{
+  background-color: navy;
+  color: skyblue;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
-.bg-active {
-  visibility: visible;
-  opacity: 1;
+/* #carousel {
+  overflow: hidden;
 }
 
-.modal {
-  border-color: skyblue;
-  width: 30%;
-  height: 30%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
-  font-family: 'Nova Square';
+#carousel>figure {
   position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  animation: 20s carousel infinite;
 }
 
-.modal button {
-  padding: 10px 30px;
-  background-color: skyblue;
-  color: maroon;
-  font-family: 'Nova Square';
-  cursor: pointer;
-}
+ #carousel>figure>img {
+   width: 25%;
+   float: left;
+ }
 
-.modal-close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-weight: bold;
-  cursor: pointer;
-}
+ @@keyframes carousel {
+   0% {
+     left: 0;
+   }
+   20% {
+     left: 0;
+   }
+   25% {
+     left: -100%;
+   }
+   45% {
+     left: -100%;
+   }
+   50% {
+     left: -200%;
+   }
+   70% {
+     left: -200%;
+   }
+   75% {
+     left: -300%;
+   }
+   95% {
+     left: -300%;
+   }
+  100%:{
+     left: -400%;
+   } */
